# swagger/swagger.yaml
@@ -1846,6 +1846,31 @@ paths:
           description: error
           schema:
             $ref: "#/definitions/Error"
+  /accounts/{id}/organizations/{organizationId}:
+    x-swagger-router-controller: accountController
+    post:
+      summary: Select Organization
+      description: Select Organization, ID site only
+      operationId: selectOrganization
+      tags:
+        - accounts
+      parameters:
+        - $ref: "#/parameters/Id"
+        - name: organizationId
+          in: path
+          description: Organization ID
+          required: true
+          type: string
+          format: uuid
+      responses:
+        "200":
+          description: organization selected
+          schema:
+            type: object
+        "default":
+          description: error
+          schema:
+            $ref: "#/definitions/Error"
   /accounts/{id}/{collection}:
     x-swagger-router-controller: accountController
     get:
